@@ -16,6 +16,7 @@ import frc.robot.Constants.FieldConstants.ReefHeight;
 import frc.robot.RobotState;
 import frc.robot.RobotState.RobotAction;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import org.littletonrobotics.junction.Logger;
@@ -60,7 +61,7 @@ public class SetpointGenerator {
   private static List<MeshedSetpoint> kIntakePositionsBlue =
       List.of(
           new MeshedSetpoint(
-              new Pose2d(1.0, 0.96, Rotation2d.fromDegrees(54)), -.714, 0.7419, 1.7269, 1.98214),
+              new Pose2d(1.0, 0.96, Rotation2d.fromDegrees(54)), -.714, 1.98214, 0.7419, 1.7269),
           new MeshedSetpoint(
               new Pose2d(1.0, 6.1, Rotation2d.fromDegrees(-54)), .714, 6.0678634, 0.7419, 1.7269));
 
@@ -360,21 +361,15 @@ public class SetpointGenerator {
   }
 
   public static Rotation2d generateLollipopAngle(Translation2d driveTranslation) {
-    var lollipopPoses =
-        new ArrayList<>(
-            List.of(
-                FieldConstants.StagingPositions.kLeftIceCream,
-                FieldConstants.StagingPositions.kMiddleIceCream,
-                FieldConstants.StagingPositions.kRightIceCream));
+    var lollipopPoses = new ArrayList<>(Arrays.asList(FieldConstants.StagingPositions.kIceCreams));
 
     lollipopPoses.replaceAll(AllianceFlipUtil::apply);
 
-    var closestTranslation = lollipopPoses.get(0).getTranslation();
+    var closestTranslation = lollipopPoses.get(0);
 
     for (var pose : lollipopPoses) {
-      if (pose.getTranslation().getDistance(driveTranslation)
-          < closestTranslation.getDistance(driveTranslation)) {
-        closestTranslation = pose.getTranslation();
+      if (pose.getDistance(driveTranslation) < closestTranslation.getDistance(driveTranslation)) {
+        closestTranslation = pose;
       }
     }
 
